<resources>
    <string name="app_name">Major_project</string>
    <string name="Temperature_label"><u>Temperature</u></string>
    <string name="Humidity_label"><u>Humidity</u></string>
    <string name="Light_label"><u>Light</u></string>
    <string name="Current_range">Current Value:  </string>
    <string name="Ideal_range">Ideal Range:  </string>
    <string name="Back">Back</string>
    <string name="unlock_rm">Unlock Room</string>
    <string name="show_rm_cond">Show Room Conditions</string>
    <string name="show_rm_cont">Show Room Contents</string>
    <string name="update_rmcontents">Update Room Contents</string>
    <string name="update_rm_cond">Update Ideal Room Conditions</string>
    <string name="Save">save</string>
    <string name="onlendprompt">On lend from?</string>
    <string name="accessprompt">Who can access?</string>
    <string name="min_temp">Minimum Temp.</string>
    <string name="max_temp">Maximum Temp.</string>
    <string name="min_hum">Minimum Humidity</string>
    <string name="max_hum">Maximum Humidity</string>
    <string name="min_lux">Minimum Lux</string>
    <string name="max_lux">Maximum Lux</string>
    <string name="Origin">Museum Of Origin:</string>
    <string name="cont_desc">Description of contents:</string>
    <string name="Room_Number">Room Number: </string>

    <string name="min_temp_hint">Enter Minimum Temp.</string>
    <string name="max_temp_hint">Enter Maximum Temp.</string>
    <string name="min_hum_hint">Enter Minimum Humidity</string>
    <string name="max_hum_hint">Enter Maximum Humidity</string>
    <string name="min_lux_hint">Enter Minimum Lux</string>
    <string name="max_lux_hint">Enter Maximum Lux</string>

    <string-array name="museums">
        <item>Us</item>
        <item>M1</item>
        <item>M2</item>
        <item>M3</item>
        <item>M4</item>
        <item>M5</item>
    </string-array>
    <string-array name="User_access_vlv">
        <item>user1</item>
        <item>user2</item>
        <item>user3</item>
        <item>user4</item>
        <item>user5</item>
    </string-array>
</resources>


