<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update_conditions">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="Update Ideal Room Conditions"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/min_temp_text"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/min_temp" />

        <EditText
            android:id="@+id/min_temp_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/min_temp_hint"
            android:textSize="14sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="367dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <TextView
            android:id="@+id/max_temp_text"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/max_temp" />

        <EditText
            android:id="@+id/max_temp_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/max_temp_hint"
            android:textSize="14sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="367dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2">

        <TextView
            android:id="@+id/min_hum_text"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/min_hum" />

        <EditText
            android:id="@+id/min_hum_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/min_hum_hint"
            android:textSize="14sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="367dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow3">

        <TextView
            android:id="@+id/max_hum_text"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/max_hum" />

        <EditText
            android:id="@+id/max_hum_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/max_hum_hint"
            android:textSize="14sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="367dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow4">

        <TextView
            android:id="@+id/min_Lux_text"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/min_lux" />

        <EditText
            android:id="@+id/min_Lux_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/min_lux_hint"
            android:textSize="14sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="367dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow5">

        <TextView
            android:id="@+id/max_lux_text"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/max_lux" />

        <EditText
            android:id="@+id/max_lux_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/max_lux_hint"
            android:textSize="14sp" />

    </TableRow>
    <Button
        android:id="@+id/Back_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="41dp"
        android:onClick="back_but"
        android:text="@string/Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow6" />

    <Button
        android:id="@+id/save_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow6" />
</androidx.constraintlayout.widget.ConstraintLayout>